lib/tests/fixtures/compiler/parser/break_in_function.baseline
Error: break_in_function.pp:3:9: break statement cannot be used inside a function statement.
  break
  ^~~~~
