lib/tests/fixtures/compiler/parser/break_in_function.pp
function foo() {
    if true {
        break
    }
}
